--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width" , initial-scale="1" />
-    <title>To-Do List App - Easy Tutorials</title>
+    <title>To-Do List App</title>
     <link rel="icon" type="image/png" href="images/icon.png" />
 
     <link rel="stylesheet" href="style.css" />
